tests/positive/Test24.sp
(* Testing definitions *)
pi:Int = 3;
main:Int(max:Int, b:[String]) {
	b[3 + pi];
	return 2;
}