tests/negative/Test18.sp
(* Testing arrays *)
max:Int(a:[Int]){
	i:Int = 2;
	f:Int = a.get_array()[i + 3 + d()];
	return 2;
}

d:Double() {
	return 2.0;
}